--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,13 @@
 
             android:text="Show"/>
 
+    <Button android:id="@+id/btnViewList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+
+            android:text="View Film List"/>
+
     <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
